MB-24094: Add Item to SequenceList on TTL update

In the GAT Path, when the item is expired, we update the expiry
time. In the case of ephemeral buckets, that item should be updated on
the sequence list.

Change-Id: I2b83456e53cb2d2e4d762d939a716c39c9a725bd
Reviewed-on: http://review.couchbase.org/78032
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>